--- a/_data/timeline.yml
+++ b/_data/timeline.yml
@@ -51,7 +51,7 @@
     description: Grad Student (MBA)
     content:
     - data: 
-        - Concentration - Operations & Decision Science
+        - Concentration in Operations & Decision Science
     #- data: 
     #    - Product Intern at Delhivery - Logistics company
     #  item: 
